--- a/getrecipe.css
+++ b/getrecipe.css
@@ -8,6 +8,12 @@ html,body {
     height: 450px;
 } */
 
+*{
+  padding:auto;
+  margin:auto;
+  text-align:center;
+  }
+
 span#card-title{
     font-size: 1.2rem;
     line-height: normal;
