--- a/getrecipe.css
+++ b/getrecipe.css
@@ -73,14 +73,58 @@ p.card-text{
 }
 
 .save-recipe-button {
+  border-width: 0;
+  background-color: white;
   color:  rgba(0, 0, 0, 0.589);
   font-size: 1.5em;
   text-align: center;
 }
 
 .save-recipe-button:hover {
+  border-width: 0;
+  background-color: white;
   color: rgba(75, 74, 74, 0.589);
   border-radius: 15px 15px 15px 15px;
   font-size: 1.5em;
   text-align: center;
 } 
+
+.subscript{
+  font-size: xx-small;
+  color: rgb(160, 153, 153);
+}
+
+.info-div-parent{
+  display: flex; 
+  flex-direction: column;
+  justify-content: left;
+  text-align: left;
+  margin-left: 10px;
+  margin: none;
+}
+
+.info-div {
+  text-align: left;
+  justify-content: left;
+  margin: none;
+}
+
+.header-div h4{
+  margin: 0px;
+}
+
+.modal {
+  overflow: hidden;
+  height: 100%;
+  display: flex !important;
+  flex-direction: column;
+}
+
+.modal .modal-content {
+  overflow: auto;
+  height: 100%;
+}
+
+.modal .row {
+  height: 100%
+}
