--- a/getrecipe.css
+++ b/getrecipe.css
@@ -1,17 +1,3 @@
-#favourite-recipe-modal{
-  width: 95%;
-  max-height: 95%;
-}
-#about-modal{
-  width: 95%;
-  max-height: 95%;
-}
-
-#modal1{
-  width: 95%;
-  max-height: 95%;
-}
-
 html,body {
     margin:0;
     padding:0;
@@ -19,7 +5,9 @@ html,body {
     padding:auto;
     margin:auto;
     text-align:center;
+    
 }
+
 
 span#card-title{
     font-size: 1.2rem;
@@ -50,6 +38,90 @@ p.card-text{
     cursor: pointer;
     box-shadow: 0 0 20px rgb(75, 75, 75);
 }
+
+.carousel-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right-button,.left-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  offset: ;
+  padding: 0 0.5rem;
+  height: fit-content;
+  background-color: white;
+  border: none;
+  border-radius: 50%;
+  font-size: 2rem;
+  color: rgba(179, 178, 178, 0.5);
+}
+
+.right-button:hover,.left-button:hover{
+  cursor: pointer;
+  background-color: rgba(179, 178, 178, 0.5) ;
+  color: rgb(255, 255, 255);
+}
+
+.right-button:focus,.left-button:focus{
+  background-color: rgba(179, 178, 178, 0.5) ;
+  color: rgb(255, 255, 255);
+}
+
+
+.wrapper{
+  width: 90%;
+  height: 160px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+#saved-recipe-carousel{
+  display: flex;
+  width: 95%;
+  /* overflow-x: scroll; */
+  height: 100%;
+}
+
+.saved-recipe-carousel-card{
+  margin:0.5rem;
+}
+
+.saved-recipe-carousel-image:hover, .saved-recipe-carousel-title:hover{
+  cursor: pointer;
+  box-shadow: 0 0 10px rgb(75, 75, 75);
+}
+
+
+.wrapper::-webkit-scrollbar{
+  display: none;
+}
+
+.saved-recipe-carousel-image{
+  width: 150px;
+  height: 150px;
+  margin: 0;
+  border-radius: 50%;
+}
+
+.saved-recipe-carousel-title{
+  display: flex;
+  margin: 0;
+  position: relative;
+  height: 150px;
+  --heightA: 150px;
+  top: calc(-80px - var(--heightA)/2);
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(100, 100, 100, 0.4);
+  color:white;
+  font-weight: 700;
+}
+
+
 .container {
     margin: 0 auto;
     max-width: 90%;
