--- a/getrecipe.css
+++ b/getrecipe.css
@@ -26,9 +26,11 @@ p.card-text{
 
 .card.small{
     border-radius: 1rem;
+  
 }
 
 .card-image{
+
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     
@@ -151,13 +153,20 @@ p.card-text{
 
 .save-recipe-button {
   border-width: 0;
-  background-color: white;
-  color:  rgba(0, 0, 0, 0.589);
-  font-size: 1.5em;
   text-align: center;
+  position: absolute;
+  bottom: 260px;
+  right: 20px;
+  border-radius: 15px 15px 15px 15px;
+  /* padding: 0px; */
+  background-color: rgba(75, 74, 74, 0.589);
+  color:  white;
+  font-size: 1.5em;
+  
 }
 
-.save-recipe-button:hover, .save-recipe-button:active {
+
+.save-recipe-button:hover, .save-recipe-button:focus {
   border-width: 0;
   background-color: white;
   color: rgba(75, 74, 74, 0.589);
