--- a/getrecipe.css
+++ b/getrecipe.css
@@ -44,6 +44,7 @@ p.card-text{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .right-button,.left-button{
