enter button and save only once

--- a/style.css
+++ b/style.css
@@ -73,9 +73,15 @@
       width: 100%;
     }
 
+    #col1-search-text {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+
     #row2-search-text{
       display: flex;
       justify-content: center;
+      /* margin-bottom: 0px; */
     }
 
 
@@ -86,6 +92,7 @@
    justify-content: space-evenly;
    background: rgba(207, 207, 207, 0.8);
    border-radius: 15px;
+   margin-bottom: 0px;
 
  }
 
@@ -155,7 +162,7 @@
 }
 
 #textarea1::placeholder{
-  color:white;
+  color:rgb(36, 35, 35);
   opacity: 1;
   font-weight: 600;
 }
