--- a/style.css
+++ b/style.css
@@ -173,3 +173,12 @@
 }
 
 /* background-color: rgba(75, 160, 41, 0.8); */
+#dropdown1{
+  background-color: maroon;
+  border-radius: 10px;
+}
+
+#dropdown-text{
+  color: white;
+  font-weight: 700;
+}
