removes suggestions when entered or back spaced

--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,7 @@
    border: none;
    display: flex;
    flex-direction: column;
+   
  }
 
  .materialize-textarea:focus{
@@ -147,10 +148,12 @@
   opacity: 0;
   pointer-events: none;
   display: none;
+  margin: 0px;
 }
 
 .autocom-box.activeingredients{
-  padding: 10px, 8px;
+  padding: 0px, 0px;
+  margin: 2px;
   max-height: 5rem;
   overflow-y: auto;
   opacity: 1;
@@ -163,7 +166,7 @@
   list-style: none;
   padding: 0px, 0px;
   width: 100%;
-  cursor: default;
+  cursor: pointer;
   border-radius: 3px;
   display: none;
  }
